TreeView root shall not be visible

--- a/bundles/designerx/ui/org.openhab.designerx.ui.javafx/src/main/resources/fxml/Main.fxml
+++ b/bundles/designerx/ui/org.openhab.designerx.ui.javafx/src/main/resources/fxml/Main.fxml
@@ -17,7 +17,7 @@
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                   <children>
-                    <TreeView prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                    <TreeView fx:id="treeView" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                   </children>
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
@@ -84,7 +84,7 @@
                 </Menu>
               </menus>
             </MenuBar>
-            <Label alignment="CENTER" contentDisplay="CENTER" disable="false" text="Welcome to openHAB DesignerFX. ^_^" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" />
+            <Label fx:id="msgLabel" alignment="CENTER" contentDisplay="CENTER" disable="false" text="Welcome to openHAB DesignerFX. ^_^" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" />
           </children>
         </AnchorPane>
       </top>
