--- a/bundles/designerx/ui/org.openhab.designerx.ui.javafx/src/main/resources/fxml/Main.fxml
+++ b/bundles/designerx/ui/org.openhab.designerx.ui.javafx/src/main/resources/fxml/Main.fxml
@@ -28,14 +28,14 @@
                           <children>
                             <AnchorPane fx:id="itemResAnchorPane" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                               <children>
-                                <TableView fx:id="itemResTableView" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="26.0">
+                                <TableView fx:id="itemResTableView" prefHeight="212.0" prefWidth="488.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="26.0">
                                   <columns>
-                                    <TableColumn editable="false" prefWidth="75.0" sortable="true" text="Type" />
-                                    <TableColumn editable="false" prefWidth="75.0" text="Name" />
-                                    <TableColumn editable="false" prefWidth="75.0" text="Label" />
-                                    <TableColumn editable="false" prefWidth="75.0" text="Icon" />
-                                    <TableColumn editable="false" prefWidth="75.0" text="Group" />
-                                    <TableColumn editable="false" maxWidth="5000.0" minWidth="10.0" prefWidth="90.0" text="Command" />
+                                    <TableColumn editable="false" prefWidth="75.0" text="Type" fx:id="itemTypeColumn" />
+                                    <TableColumn editable="false" prefWidth="75.0" text="Name" fx:id="itemNameColumn" />
+                                    <TableColumn editable="false" prefWidth="75.0" text="Label" fx:id="itemLabelColumn" />
+                                    <TableColumn editable="false" prefWidth="75.0" text="Icon" fx:id="itemIconColumn" />
+                                    <TableColumn editable="false" prefWidth="75.0" text="Groups" fx:id="itemGroupsColumn" />
+                                    <TableColumn editable="false" prefWidth="75.0" text="Command" fx:id="itemCommandColumn" />
                                   </columns>
                                 </TableView>
                                 <ToolBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
